plugins {
    id 'java'
    //shadow plugin
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

group = 'flashtanki'
version = '0.0.1-SNAPSHOT'


repositories {
    mavenCentral()
}


dependencies {
   // implementation 'org.flywaydb:flyway-core'
    //org.hibernate.cfg.AnnotationConfiguratio
    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.10.Final'
    //com.mysql.jdbc.Driver
    implementation 'mysql:mysql-connector-java:8.0.26'
    //netty  3.2.
    implementation group: 'org.jboss.netty', name: 'netty', version: '3.2.3.Final'
    //quartz 2018
    implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
    //javax.xml.bind.JAXBException
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    //impl
    implementation 'com.sun.xml.bind:jaxb-impl:2.3.1'
    //core
    implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
    //org.apache.commons.codec.digest.DigestUtils
    implementation 'commons-codec:commons-codec:1.15'
    //org.apache.commons.lang3
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    //javassist/util/proxy/MethodFilter
    implementation 'javassist:javassist:3.9.0.GA'
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    //Kafka
    implementation 'org.apache.kafka:kafka-clients:3.6.1'
    //jackson
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'

    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    implementation 'com.sun.mail:javax.mail:1.6.2'



}

tasks.named('test') {
    useJUnitPlatform()
}

shadowJar {
    // Создание fat JAR со всеми зависимостями
    archiveBaseName.set('server')
    archiveClassifier.set('')
    archiveVersion.set('')
    mergeServiceFiles()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}